hphp/hack/test/sound_dynamic/typing/top_level_1.bad.php
<?hh

class A<T> {}

function foo(A<int> $a) : void {}

<<__SupportDynamicType>>
class C {
  public function bar(A<int> $v) : void {
    foo($v);
  }
}
